RESOLVED FIXED227964
Speculative fix for failed scope.releaseAssertNoException() after calls to JSMap::create().
https://bugs.webkit.org/show_bug.cgi?id=227964
Summary Speculative fix for failed scope.releaseAssertNoException() after calls to JS...
Mark Lam
Reported 2021-07-14 12:50:55 PDT
There have been reports of flaky failures on the scope.releaseAssertNoException() after the call to JSMap::create() in JSModuleLoader::finishCreation(). The scope.releaseAssertNoException() says that we don't expect the JSMap::create() to ever throw an exception. If the assertion is true, the only way that we can see an exception there is if we're throwing an asynchronous TerminationException. Since JSModuleLoader::finishCreation() does have any long running loops, we can just DeferTerminationForAWhile and let the next exception check site throw the asynchronous TerminationException. We don't want to just use DeferTermination because it will throw the TerminationException right at the end of JSModuleLoader::finishCreation(), and the caller of JSModuleLoader::finishCreation() may be similarly not expecting an exception to be thrown there. Also apply the same treatment to AbstractModuleRecord::finishCreation(), and getBackingMap() in WebCore for the same reason. Other than those, other sites that call JSMap::create() already check for exceptions. So, those sites do not need to DeferTerminationForAWhile. rdar://78013960
Attachments
proposed patch. (4.51 KB, patch)
2021-07-14 12:59 PDT, Mark Lam
ews-feeder: commit-queue-
proposed patch. (4.86 KB, patch)
2021-07-14 13:03 PDT, Mark Lam
ysuzuki: review+
Mark Lam
Comment 1 2021-07-14 12:59:12 PDT
Created attachment 433520 [details] proposed patch.
Mark Lam
Comment 2 2021-07-14 13:03:44 PDT
Created attachment 433522 [details] proposed patch.
Yusuke Suzuki
Comment 3 2021-07-14 13:19:58 PDT
Comment on attachment 433522 [details] proposed patch. r=me
Mark Lam
Comment 4 2021-07-14 15:07:04 PDT
Thanks for the review. I'm pretty sure the jsc test failures are due to Keith's patch, which he just landed a fix for. So, I'm going to land this one.
Mark Lam
Comment 5 2021-07-14 15:11:18 PDT
Note You need to log in before you can comment on or make changes to this bug.